      length field of the UDP header.
    - Updated copyright and authorship information to include a standard
      header which references both the AUTHORS and CREDITS files.  The
      specific language in this header was created by the Debian legal team at
      the request of Franck Joncourt.
    - [test suite] Added Rijndael+HMAC command execution test.

fwknop-2.6.0 (01/12/2014):
    - (Radostan Riedel) Added an AppArmor policy for fwknopd that is known to
      work on Debian and Ubuntu systems.  The policy file is available at
      extras/apparmor/usr.sbin/fwknopd.
    - [libfko] Nikolay Kolev reported a build issue with Mac OS X Mavericks
      where local fwknop copies of strlcat() and strlcpy() were conflicting
      with those that already ship with OS X 10.9. Closes #108 on github.
    - [libfko] (Franck Joncourt) Consolidated FKO context dumping function into
      lib/fko_util.c. In addition to adding a shared utility function for
      printing an FKO context, this change also makes the FKO context output
      slightly easier to parse by printing each FKO attribute on a single line
      (this change affected the printing of the final SPA packet data).  The
      test suite has been updated to account for this change as well.
    - [libfko] Bug fix to not attempt SPA packet decryption with GnuPG without
      an fko object with encryption_mode set to FKO_ENC_MODE_ASYMMETRIC.  This
      bug was caught with valgrind validation against the perl FKO extension
      together with the set of SPA fuzzing packets in
      test/fuzzing/fuzzing_spa_packets.  Note that this bug cannot be
      triggered via fwknopd because additional checks are made within fwknopd
      itself to force FKO_ENC_MODE_ASYMMETRIC whenever an access.conf stanza
      contains GPG key information.  This fix strengthens libfko itself to
      independently require that the usage of fko objects without GPG key