@@ -195,6 +195,7 @@ EXTRA_DIST = \
     test/conf/hmac_no_b64_cygwin_access.conf \
     test/conf/multi_pkts.pcap \
     test/conf/fwknoprc_default_hmac_base64_key \
+    test/conf/fwknoprc_hmac_nat_rand_base64_key \
     test/conf/fwknoprc_hmac_key2 \
     test/conf/fwknoprc_gpg_hmac_key \
     test/conf/fwknoprc_hmac_equal_keys \
